feat(category): item category api
